Refactor: limpia endpoints prohibidos, añade validaciones DTO, corrige bug de fechas y repara cobertura de tests