@@ -5,7 +5,6 @@ import com.mgcss.api.dto.SolicitudResponseDTO;
 import com.mgcss.domain.Solicitud;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SolicitudApiMapper {
 
@@ -15,7 +14,6 @@ public class SolicitudApiMapper {
     public static SolicitudResponseDTO toResponseDTO(Solicitud solicitud) {
         if (solicitud == null) return null;
 
-        // 1. Extraer datos del cliente si existe
         Long clienteId = null;
         String clienteNombre = null;
         if (solicitud.getCliente() != null) {
@@ -23,7 +21,6 @@ public class SolicitudApiMapper {
             clienteNombre = solicitud.getCliente().getNombre();
         }
 
-        // 2. Extraer datos del técnico si existe
         Long tecnicoId = null;
         String tecnicoNombre = null;
         if (solicitud.getTecnicoAsignado() != null) {
@@ -31,28 +28,27 @@ public class SolicitudApiMapper {
             tecnicoNombre = solicitud.getTecnicoAsignado().getNombre();
         }
 
-        // 3. Mapear el historial de estados
         List<EstadoChangeDTO> historialDto;
         if (solicitud.getHistorial() != null) {
             historialDto = solicitud.getHistorial().stream()
                 .map(ch -> new EstadoChangeDTO(ch.getEstadoAnterior(), ch.getEstadoNuevo(), ch.getFechaCambio()))
-                .collect(Collectors.toList());
+                .toList(); // SonarCloud: .collect cambiado a .toList()
         } else {
             historialDto = new ArrayList<>();
         }
 
-        // 4. Construimos el DTO inmutable de un solo golpe usando su constructor
-        return new SolicitudResponseDTO(
-            solicitud.getId(),
-            clienteId,
-            clienteNombre,
-            solicitud.getDescripcion(),
-            solicitud.getFechaCreacion(),
-            solicitud.getEstado(),
-            tecnicoId,
-            tecnicoNombre,
-            solicitud.getFechaCierre(),
-            historialDto
-        );
+        SolicitudResponseDTO dto = new SolicitudResponseDTO();
+        dto.setId(solicitud.getId());
+        dto.setClienteId(clienteId);
+        dto.setClienteNombre(clienteNombre);
+        dto.setDescripcion(solicitud.getDescripcion());
+        dto.setFechaCreacion(solicitud.getFechaCreacion());
+        dto.setEstado(solicitud.getEstado());
+        dto.setTecnicoId(tecnicoId);
+        dto.setTecnicoNombre(tecnicoNombre);
+        dto.setFechaCierre(solicitud.getFechaCierre());
+        dto.setHistorial(historialDto);
+
+        return dto;
     }
 }
